[project]
name = "comfyui-preview360panorama"
description = "A custom ComfyUI node for interactive 360° panorama image previews. Panoramic 360 images are also sometimes known as VR photography (virtual reality), HDRI environments (ex: skyboxes), image spheres, spherical images, 360 pano, and 360 degree photos."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = [""]

[project.urls]
Repository = "https://github.com/ProGamerGov/ComfyUI_preview360panorama"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "progamergov"
DisplayName = "ComfyUI_preview360panorama"
Icon = ""
